# playing-with-rag

./: .gitignore  .justfile  README.md  docker-compose.dev.yml  docker-compose.yml
Verba/: .env.dev.example  .env.example  .gitignore  Dockerfile  pyproject.toml  setup.py
Verba/frontend/app/: api.ts  page.tsx  types.ts
Verba/frontend/app/components/Chat/: ChatMessage.tsx  ChatView.tsx
Verba/frontend/app/components/Document/: ContentView.tsx  DocumentSearch.tsx
Verba/frontend/app/components/Ingestion/: BasicSettingView.tsx  FileSelectionView.tsx  IngestionView.tsx
Verba/frontend/app/components/Login/: LoginView.tsx
Verba/goldenverba/: env.py  verba_manager.py
Verba/goldenverba/components/: WindowRetriever.py  api.py  chunk.py  document.py  interfaces.py  managers.py
Verba/goldenverba/components/chunking/: SemanticChunker.py  SentenceChunker.py
Verba/goldenverba/components/embedding/: OllamaEmbedder.py
Verba/goldenverba/components/generation/: OllamaGenerator.py
Verba/goldenverba/components/reader/: BasicReader.py  GitReader.py
Verba/goldenverba/server/: api.py  cli.py  helpers.py  types.py
ollama/: ollama_model_puller.sh
ragit/: .env.dev.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
ragit/.github/ISSUE_TEMPLATE/: ragit-feature-template.md  verba-issue-template.md
ragit/.github/workflows/: docker-image.yml
ragit/backend/: ragit_manager.py  verba_manager.py
ragit/backend/components/: api.py  chunk.py  document.py  interfaces.py  managers.py
ragit/backend/components/chunking/: CodeChunker.py  HTMLChunker.py  JSONChunker.py  MarkdownChunker.py  RecursiveChunker.py  (+4 more)
ragit/backend/server/: api.py  cli.py  helpers.py  types.py
ragit/frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
ragit/frontend/app/: api.ts  layout.tsx  page.tsx  types.ts
ragit/goldenverba/: verba_manager.py
ragit/goldenverba/components/: WindowRetriever.py  api.py  interfaces.py  managers.py  util.py
ragit/goldenverba/server/: api.py  cli.py
scripts/: dev.sh  run.dev.sh
weaviate/: docker-compose.yml  ollama_model_puller.sh
(+49 files in other folders)
