[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ragit"
version = "1.0.0"
description = "Welcome to RAGit: talk to your Git repositories."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10.0,<3.13.0"
authors = [
    { name = "Guilospanck", email = "guilospanck@protonmail.com" }
]
license = { file = "LICENSE" }
keywords = []
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

dependencies = [
    "weaviate-client==4.16.6",
    "python-dotenv==1.0.0",
    "openpyxl==3.1.5",
    "wasabi==1.1.2",
    "fastapi==0.111.1",
    "uvicorn[standard]==0.29.0",
    "gunicorn==22.0.0",
    "click==8.1.7",
    "xlrd==2.0.2",
    "asyncio==3.4.3",
    "tiktoken==0.6.0",
    "requests==2.31.0",
    "pypdf==4.3.1",
    "python-docx==1.1.2",
    "scikit-learn==1.5.1",
    "langchain-text-splitters==0.2.2",
    "spacy==3.7.5",
    "aiohttp==3.9.5",
    "markdownify==0.13.1",
    "aiofiles==24.1.0",
    "beautifulsoup4==4.12.3",
    "langdetect==1.0.9"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "wheel",
    "twine",
    "black>=23.7.0",
    "setuptools",
    "ruff>=0.5.0",
    "mypy>=1.8.0"
]
google = [
    "vertexai==1.46.0"
]
huggingface = [
    "sentence-transformers==3.0.1"
]

[project.urls]
Homepage = "https://github.com/Guilospanck/playing-with-rag"

[project.scripts]
ragit = "goldenverba.server.cli:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
select = ["E","F","I","UP","B","ANN"] 
ignore = []
target-version = "py310"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
no_implicit_optional = true

